# breviori

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose-prd.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
migrations/: env.py
migrations/versions/: 61a9d1b4b4c4_links_tamanho.py  7d4a374401f8_links_expirado_mudado.py  a0ba0d612b70_create_links.py
src/app/: main.py
src/app/api/: schema.py
src/app/api/libs/: scheduler.py
src/app/api/resolvers/: short.py
src/app/api/types/: short.py
src/app/core/: config.py  database.py
src/app/models/: short.py
src/app/static/: index.html  styles.css
